<resources>

    <string name="app_name">StereoSystem</string>
    <string name="label_ip">IP:</string>
    <string name="playsong">Play Song</string>
    <string name="label_port">Port:</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="sound_mixer">Sound Mixer</string>
    <string name="menu_settings">Mixer</string>
    <string name="title_activity_main">Stereo System</string>
    <string name="label_myip">My IP:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="refresh_socket">Show Sock.</string>
    <string name="IP">192.3.17.101</string>
    <string name="pause">Pause</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
 	<string name="button_left">PlayList</string>
 	<string name="button_2">Mixer</string>
 	<string name="button_3">Albums</string>
 	<string name="top_right">Current</string>
 	<string name="text"/><string name="text3"/>
 	<string name="vol_left">0</string>
 	<string name="vol_2nd">20</string>
 	<string name="vol_3rd">40</string>
 	<string name="vol_4th">60</string>
 	<string name="vol_5th">80</string>
 	<string name="text_address"/>
 	<string name="songs_title">Songs</string>
 	<string name="list_title">Playlists</string>
 	<string name="ctrl_panel">Play</string>
 	<string name="sel_songs">Select Songs</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_playlist_builder">PlaylistBuilderActivity</string>
    <string name="title_activity_text_entry">TextEntryDialog</string>
    <string name="title_activity_all_songs_list">AllSongsListActivity</string>
    <string name="title_activity_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="repeat_button">Repeat Playlist</string>
    <string name="shuffle_button">Shuffle Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="modify_playlist_name">Modify Playlist Name</string>
	<string name="shu">"shuffle "</string>
    <string name="repeat">RepeatSong</string>
    <string name="repeats">RpeatSong</string>
    <string name="MixerActivity">MixerActivity</string>
    <string name="volume">Volume:</string>
    <string name="pitch">Pitch:</string>
    <string name="length">Length:</string>
    <string name="playbackSpeed">Playback Speed:</string>
    <string name="songName">Song Name</string>
    <string name="SongPropertyActivity">Song Properties</string>
    <string name="pitch_quality">Pitch Quality</string>
     
    
</resources>
